--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 var speed = 5000  //圖片切換時間
 var img= new Array()
 var current = 0
-//一張圖片對應一個網址,可無限增加,編號由0開始
+//一張圖片
 img[0] = new Image(); img[0].src = "facebook.gif";
 img[1] = new Image(); img[1].src = "facebook1.gif";
 img[2] = new Image(); img[2].src = "facebook2.gif";
